--- a/index.html
+++ b/index.html
@@ -53,10 +53,25 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-8 text-center">
-                        <h2 class="text-white mt-0">We've got what you need!</h2>
+                        <h2 class="text-white mt-0">Facts About Sleep</h2>
                         <hr class="divider light my-4" />
-                        <p class="text-white-50 mb-4">Start Bootstrap has everything you need to get your new website up and running in no time! Choose one of our open source, free to download, and easy to use themes! No strings attached!</p>
-                        <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Get Started!</a>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-sm-12 col-lg-3 card" style="width: 18rem;">
+                        <div class="card-body">
+                            <p class="card-text">A typical person needs around 8 hours of good-quality sleep a night to function properly.</p>
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-lg-3 offset-lg-1 card" style="width: 18rem;">
+                        <div class="card-body">
+                            <p class="card-text">When you lack sleep, you experience fatigue -- short temper and lack of focus that often follow a poor night’s sleep.</p>
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-lg-3 offset-lg-1 card" style="width: 18rem;">
+                        <div class="card-body">
+                            <p class="card-text">Occasional nights without sleep, you would feel tired and irritable the next day (it won’t harm your health).</p>
+                        </div>
                     </div>
                 </div>
             </div>
