--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     </div>
                     <div class="col-lg-8 align-self-baseline">
                         <p class="text-white-75 font-weight-light mb-5">People need at least 8 hours of sleep to maintain good health physically and mentally. </p>
-                        <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
+                        <a class="btn btn-primary btn-xl js-scroll-trigger" href="#home">Go to Homepage</a>
                     </div>
                 </div>
             </div>
@@ -77,44 +77,44 @@
             </div>
         </section>
         <!-- Services-->
-        <section class="page-section" id="science-of-sleep">
-            <div class="container">
-                <h2 class="text-center mt-0">At Your Service</h2>
-                <hr class="divider my-4" />
-                <div class="row">
-                    <div class="col-lg-3 col-md-6 text-center">
-                        <div class="mt-5">
-                            <i class="fas fa-4x fa-gem text-primary mb-4"></i>
-                            <h3 class="h4 mb-2">Sturdy Themes</h3>
-                            <p class="text-muted mb-0">Our themes are updated regularly to keep them bug free!</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 text-center">
-                        <div class="mt-5">
-                            <i class="fas fa-4x fa-laptop-code text-primary mb-4"></i>
-                            <h3 class="h4 mb-2">Up to Date</h3>
-                            <p class="text-muted mb-0">All dependencies are kept current to keep things fresh.</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 text-center">
-                        <div class="mt-5">
-                            <i class="fas fa-4x fa-globe text-primary mb-4"></i>
-                            <h3 class="h4 mb-2">Ready to Publish</h3>
-                            <p class="text-muted mb-0">You can use this design as is, or you can make changes!</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 text-center">
-                        <div class="mt-5">
-                            <i class="fas fa-4x fa-heart text-primary mb-4"></i>
-                            <h3 class="h4 mb-2">Made with Love</h3>
-                            <p class="text-muted mb-0">Is it really open source if it's not made with love?</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
+        <!--<section class="page-section" id="science-of-sleep">-->
+        <!--    <div class="container">-->
+        <!--        <h2 class="text-center mt-0">At Your Service</h2>-->
+        <!--        <hr class="divider my-4" />-->
+        <!--        <div class="row">-->
+        <!--            <div class="col-lg-3 col-md-6 text-center">-->
+        <!--                <div class="mt-5">-->
+        <!--                    <i class="fas fa-4x fa-gem text-primary mb-4"></i>-->
+        <!--                    <h3 class="h4 mb-2">Sturdy Themes</h3>-->
+        <!--                    <p class="text-muted mb-0">Our themes are updated regularly to keep them bug free!</p>-->
+        <!--                </div>-->
+        <!--            </div>-->
+        <!--            <div class="col-lg-3 col-md-6 text-center">-->
+        <!--                <div class="mt-5">-->
+        <!--                    <i class="fas fa-4x fa-laptop-code text-primary mb-4"></i>-->
+        <!--                    <h3 class="h4 mb-2">Up to Date</h3>-->
+        <!--                    <p class="text-muted mb-0">All dependencies are kept current to keep things fresh.</p>-->
+        <!--                </div>-->
+        <!--            </div>-->
+        <!--            <div class="col-lg-3 col-md-6 text-center">-->
+        <!--                <div class="mt-5">-->
+        <!--                    <i class="fas fa-4x fa-globe text-primary mb-4"></i>-->
+        <!--                    <h3 class="h4 mb-2">Ready to Publish</h3>-->
+        <!--                    <p class="text-muted mb-0">You can use this design as is, or you can make changes!</p>-->
+        <!--                </div>-->
+        <!--            </div>-->
+        <!--            <div class="col-lg-3 col-md-6 text-center">-->
+        <!--                <div class="mt-5">-->
+        <!--                    <i class="fas fa-4x fa-heart text-primary mb-4"></i>-->
+        <!--                    <h3 class="h4 mb-2">Made with Love</h3>-->
+        <!--                    <p class="text-muted mb-0">Is it really open source if it's not made with love?</p>-->
+        <!--                </div>-->
+        <!--            </div>-->
+        <!--        </div>-->
+        <!--    </div>-->
+        <!--</section>-->
         <!-- Portfolio-->
-        <section id="call-to-action">
+        <section id="science-of-sleep">
             <div class="container-fluid p-0">
                 <div class="row no-gutters">
                     <div class="col-lg-4 col-sm-6">
@@ -175,10 +175,9 @@
             </div>
         </section>
         <!-- Call to action-->
-        <section class="page-section bg-dark text-white">
+        <section  id="call-to-action" class="page-section bg-dark text-white">
             <div class="container text-center">
-                <h2 class="mb-4">Free Download at Start Bootstrap!</h2>
-                <a class="btn btn-light btn-xl" href="https://startbootstrap.com/themes/creative/">Download Now!</a>
+                <h2 class="mb-4">Call to Action</h2>
             </div>
         </section>
         <!-- Contact-->
@@ -186,19 +185,19 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-8 text-center">
-                        <h2 class="mt-0">Let's Get In Touch!</h2>
+                        <h2 class="mt-0">About Us</h2>
                         <hr class="divider my-4" />
-                        <p class="text-muted mb-5">Ready to start your next project with us? Give us a call or send us an email and we will get back to you as soon as possible!</p>
+                        <p class="text-muted mb-5">Want to learn more about us? Visit our GitHub profiles by clicking on the links below!</p>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
-                        <i class="fas fa-phone fa-3x mb-3 text-muted"></i>
-                        <div>+1 (555) 123-4567</div>
+                        <i class="fa-3x mb-3 text-muted"><img class="image-small" src="../freedom-project/assets/img/github-icon.png"></i> 
+                        <a class="d-block" href="https://github.com/devonl2108">Devon Lum</a>
                     </div>
                     <div class="col-lg-4 mr-auto text-center">
-                        <i class="fas fa-envelope fa-3x mb-3 text-muted"></i
-                        ><!-- Make sure to change the email address in BOTH the anchor text and the link target below!--><a class="d-block" href="mailto:contact@yourwebsite.com">contact@yourwebsite.com</a>
+                        <i class="fa-3x mb-3 text-muted"><img class="image-small" src="../freedom-project/assets/img/github-icon.png"></i> 
+                        <!-- Make sure to change the email address in BOTH the anchor text and the link target below!--><a class="d-block" href="https://github.com/lydiay3590">Lydia Ye</a>
                     </div>
                 </div>
             </div>
