fix home page button and information section

--- a/index.html
+++ b/index.html
@@ -84,8 +84,7 @@
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/1.jpg"
                             ><img class="img-fluid" src="assets/img/portfolio/thumbnails/1.jpg" alt="" />
                             <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
+                                <div class="project-name">Stages of Sleep</div>
                             </div></a
                         >
                     </div>
@@ -93,8 +92,7 @@
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/2.jpg"
                             ><img class="img-fluid" src="assets/img/portfolio/thumbnails/2.jpg" alt="" />
                             <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
+                                <div class="project-name">Sleep Loss</div>
                             </div></a
                         >
                     </div>
@@ -102,8 +100,7 @@
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/3.jpg"
                             ><img class="img-fluid" src="assets/img/portfolio/thumbnails/3.jpg" alt="" />
                             <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
+                                <div class="project-name">How Sleep Affects Our Health</div>
                             </div></a
                         >
                     </div>
@@ -111,8 +108,7 @@
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/4.jpg"
                             ><img class="img-fluid" src="assets/img/portfolio/thumbnails/4.jpg" alt="" />
                             <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
+                                <div class="project-name">Ways to Catch up on Sleep</div>
                             </div></a
                         >
                     </div>
@@ -120,8 +116,7 @@
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/5.jpg"
                             ><img class="img-fluid" src="assets/img/portfolio/thumbnails/5.jpg" alt="" />
                             <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
+                                <div class="project-name">Benefits of Sleeping</div>
                             </div></a
                         >
                     </div>
@@ -129,8 +124,7 @@
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/6.jpg"
                             ><img class="img-fluid" src="assets/img/portfolio/thumbnails/6.jpg" alt="" />
                             <div class="portfolio-box-caption p-3">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
+                                <div class="project-name">Fun Facts</div>
                             </div></a
                         >
                     </div>
@@ -142,7 +136,7 @@
             <div class="container text-center">
                 <h2 class="mb-4">Call to Action</h2>
                 <div class="row justify-content-center">
-                    <div class="col-sm-12 col-lg-3 card text-black" style="width: 18rem;">
+                    <div class="col-sm-12 col-lg-6 card text-black" style="width: 18rem;">
                         <div class="card-body">
                             <p class="card-text">People need at least 8 hours of sleep to maintain good health physically and mentally.</p>
                         </div>
@@ -163,11 +157,11 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
-                        <i class="fa-3x mb-3 text-muted"><img class="image-small" src="../freedom-project/assets/img/github-icon.png"></i> 
+                        <i class="fa-3x mb-3 text-muted"><img class="image-small" src="../freedom-project/assets/img/github-icon.png"></i>
                         <a class="d-block" href="https://github.com/devonl2108">Devon Lum</a>
                     </div>
                     <div class="col-lg-4 mr-auto text-center">
-                        <i class="fa-3x mb-3 text-muted"><img class="image-small" src="../freedom-project/assets/img/github-icon.png"></i> 
+                        <i class="fa-3x mb-3 text-muted"><img class="image-small" src="../freedom-project/assets/img/github-icon.png"></i>
                         <!-- Make sure to change the email address in BOTH the anchor text and the link target below!--><a class="d-block" href="https://github.com/lydiay3590">Lydia Ye</a>
                     </div>
                 </div>
