--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <div class="container-fluid p-0">
                 <div class="row no-gutters">
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/1.jpg"
+                        <a class="portfolio-box" href="stages-of-sleep.html"
                             ><img class="img-fluid" src="assets/img/portfolio/thumbnails/1.jpg" alt="" />
                             <div class="portfolio-box-caption">
                                 <div class="project-name">Stages of Sleep</div>
@@ -89,7 +89,7 @@
                         >
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/2.jpg"
+                        <a class="portfolio-box" href="sleep-loss.html"
                             ><img class="img-fluid" src="assets/img/portfolio/thumbnails/2.jpg" alt="" />
                             <div class="portfolio-box-caption">
                                 <div class="project-name">Sleep Loss</div>
@@ -97,7 +97,7 @@
                         >
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/3.jpg"
+                        <a class="portfolio-box" href="how-sleep-affects-our-health.html"
                             ><img class="img-fluid" src="assets/img/portfolio/thumbnails/3.jpg" alt="" />
                             <div class="portfolio-box-caption">
                                 <div class="project-name">How Sleep Affects Our Health</div>
@@ -105,7 +105,7 @@
                         >
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/4.jpg"
+                        <a class="portfolio-box" href="ways-to-catch-up-on-sleep.html"
                             ><img class="img-fluid" src="assets/img/portfolio/thumbnails/4.jpg" alt="" />
                             <div class="portfolio-box-caption">
                                 <div class="project-name">Ways to Catch up on Sleep</div>
@@ -113,7 +113,7 @@
                         >
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/5.jpg"
+                        <a class="portfolio-box" href="benefits-of-sleeping.html"
                             ><img class="img-fluid" src="assets/img/portfolio/thumbnails/5.jpg" alt="" />
                             <div class="portfolio-box-caption">
                                 <div class="project-name">Benefits of Sleeping</div>
@@ -121,7 +121,7 @@
                         >
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/6.jpg"
+                        <a class="portfolio-box" href="fun-facts.html"
                             ><img class="img-fluid" src="assets/img/portfolio/thumbnails/6.jpg" alt="" />
                             <div class="portfolio-box-caption p-3">
                                 <div class="project-name">Fun Facts</div>
