--- a/benefits-of-sleeping.html
+++ b/benefits-of-sleeping.html
@@ -7,14 +7,13 @@
   </head>
   <body class="blog">
   <div class="header">
-  <h1>Benefits of Sleeping</h1>
+  <i><h1 class="title-size fade-in-title">Benefits of Sleeping</h1></i>
 </div>
 
 <div class="row">
   <div class="leftcolumn">
-    <div class="card">
-      <h2>Benefits of a Good Night's Sleep</h2>
-      <img class="center" src="assets/img/benefits-of-sleeping.jpg" alt="Benefits of Sleeping" width="1000" height="600">
+    <div class="card fade-in-card">
+      <h2 class="blue-font">Benefits of a Good Night's Sleep</h2>
       <br>
       <ul>
         <li>A 2013 study on mice conveyed that while the rodents slept, toxins like beta amyloid (amino acids that are in relation to Alzheimer's disease — a disease that destroys memory and other important mental functions — which are found in the brain) deteriorate.</li>
@@ -43,6 +42,8 @@
           </ul>
         </ul>
       </ul>
+      <br>
+      <img class="center fade-in-img" src="assets/img/benefits-of-sleeping.jpg" alt="Benefits of Sleeping" width="780" height="420">
     </div>
   </div>
 </div>
