--- a/fun-facts.html
+++ b/fun-facts.html
@@ -7,16 +7,17 @@
   </head>
   <body class="blog">
   <div class="header">
-  <h1>Fun Facts</h1>
+  <i><h1 class="title-size fade-in-title">Fun Facts</h1></i>
 </div>
 
 <div class="row">
   <div class="leftcolumn">
-    <div class="card">
-      <h2>Fun Facts About Sleeping</h2>
-      <img class="center" src="assets/img/fun-facts-about-sleeping.jpg" alt="Fun Facts About Sleeping">
+    <div class="card fade-in-card">
+      <h2 class="blue-font">Fun Facts About Sleeping</h2>
       <br>
-      <ul>
+      <img class="center fade-in-img" src="assets/img/fun-facts-about-sleeping.gif" alt="Fun Facts About Sleeping" width="500" height="375">
+      <br>
+      <ol>
         <li>A cooler room helps you sleep better.</li>
         <br>
         <li>Being woken up in a REM stage can leave a person feeling groggy or overly sleepy.</li>
@@ -36,7 +37,7 @@
         <li>Athletes tend to need more sleep than normal people.</li>
         <br>
         <li>Sleeping can help with your weight.</li>
-      </ul>
+      </ol>
     </div>
   </div>
 </div>
