--- a/how-sleep-affects-our-health.html
+++ b/how-sleep-affects-our-health.html
@@ -5,18 +5,18 @@
     <title>How Sleep Affects Our Health</title>
     <link href="css/styles.css" rel="stylesheet" />
   </head>
+  
   <body class="blog">
-  <div class="header">
-  <h1>How Sleep Affects Our Health</h1>
-</div>
-
-<div class="row">
-  <div class="leftcolumn">
-    <div class="card">
-      <h2>The Impact Sleep Does to Your Health</h2>
-      <img class="center" src="assets/img/how-sleep-affects-health.jpg" alt="How Sleep Affects Health">
-      <br>
-      <ul>
+    <div class="header">
+      <i><h1 class="title-size fade-in-title">How Sleep Affects Our Health</h1></i>
+    </div>
+    
+    <div class="row">
+       <div class="leftcolumn">
+          <div class="card fade-in-card">
+             <h2 class="blue-font">The Impact Sleep Does to Your Health</h2>
+             <br>
+             <ul>
         <li><u><b>If the lack of sleep continues, it can significantly impact your overall health:</b></u></li>
         <ul>
           <li>You’re likely to be prone to serious medical conditions (e.g. obesity, heart disease, high blood pressure and diabetes.</li>
@@ -61,6 +61,8 @@
           </ul>
         </ul>
       </ul>
+      <br>
+      <img class="center fade-in-img" src="assets/img/how-sleep-affects-health.jpg" alt="How Sleep Affects Health" width="700" heigh="271">
     </div>
   </div>
 </div>
