--- a/sleep-loss.html
+++ b/sleep-loss.html
@@ -5,19 +5,21 @@
     <title>Sleep Loss</title>
     <link href="css/styles.css" rel="stylesheet" />
   </head>
+  
   <body class="blog">
-  <div class="header">
-  <h1>Sleep Loss</h1>
-</div>
-
-<div class="row">
-  <div class="leftcolumn">
-    <div class="card">
-      <h2>Growing Into Sleep Loss</h2>
-      <img class="center" src="assets/img/sleep-loss.jpg" alt="Sleep Loss">
-      <br>
-      <ul>
-        <li><u><b>Lack of Sleep</b></u></li>
+    <div class="header">
+      <i><h1 class="title-size fade-in-title">Sleep Loss</h1></i>
+    </div>
+    
+    <div class="row">
+      <div class="leftcolumn">
+        <div class="card fade-in-card">
+          <h2 class="blue-font">Growing Into Sleep Loss</h2>
+          <br>
+          <img class="center fade-in-img" src="assets/img/sleep-loss.png" width="600" height="400" alt="Sleep Loss">
+          <br>
+          <ul>
+            <li><u><b>Lack of Sleep</b></u></li>
         <ul>
           <li>Elementary school children lose increasingly more sleep as they move from the 2nd to the 6th grade, until drowsiness routinely interferes with older children's ability to pay attention and learn.</li>
           <br>
