--- a/ways-to-catch-up-on-sleep.html
+++ b/ways-to-catch-up-on-sleep.html
@@ -5,30 +5,32 @@
     <title>Ways to Catch up on Sleep</title>
     <link href="css/styles.css" rel="stylesheet" />
   </head>
+  
   <body class="blog">
-  <div class="header">
-  <h1>Ways to Catch up on Sleep</h1>
-</div>
-
-<div class="row">
-  <div class="leftcolumn">
-    <div class="card">
-      <h2>Catch up on Sleep Loss</h2>
-      <img class="center" src="assets/img/ways-to-catch-up-on-sleep.jpg" alt="Catch Up on Sleep">
-      <br>
-      <ul>
-        <li><u><b>If you’ve had months of restricted sleep, it will take several weeks to recover from the significant sleep debt.</b></u></li>
+    <div class="header">
+      <i><h1 class="title-size fade-in-title">Ways to Catch up on Sleep</h1></i>
+    </div>
+    
+    <div class="row">
+      <div class="leftcolumn">
+      <div class="card fade-in-card">
+        <h2 class="blue-font">Catch up on Sleep Loss</h2>
+        <br>
+        <img class="center" src="assets/img/ways-to-catch-up-on-sleep.jpg" alt="Catch Up on Sleep" width="620" height="340">
+        <br>
         <ul>
-          <li>Try to add on an extra hour or 2 of sleep a night (go to bed when you’re tired and allow your body to wake you up in the morning — don’t use alarm clocks).</li>
-          <br>
-          <li>Expect to sleep for about 10 hours the first night, the amount of time you sleep will gradually decrease to a normal level.</li>
-          <br>
-          <li>Don’t rely on caffeine or energy drinks to help boost your energy and concentration (this may disrupt your sleeping patterns even further in the long term).</li>
+          <li><b>If you’ve had months of restricted sleep, it will take several weeks to recover from the significant sleep debt.</b></li><br>
+          <ul>
+            <li>Try to add on an extra hour or 2 of sleep a night (go to bed when you’re tired and allow your body to wake you up in the morning — don’t use alarm clocks).</li>
+            <br>
+            <li>Expect to sleep for about 10 hours the first night, the amount of time you sleep will gradually decrease to a normal level.</li>
+            <br>
+            <li>Don’t rely on caffeine or energy drinks to help boost your energy and concentration (this may disrupt your sleeping patterns even further in the long term).</li>
+          </ul>
         </ul>
-      </ul>
+       </div>
     </div>
   </div>
-</div>
 
   </body>
 </html>
