--- a/stages-of-sleep.html
+++ b/stages-of-sleep.html
@@ -5,36 +5,37 @@
     <title>Stages of Sleep</title>
     <link href="css/styles.css" rel="stylesheet" />
   </head>
+  
   <body class="blog">
-  <div class="header">
-  <h1>Stages of Sleep</h1>
-</div>
-
-<div class="row">
-  <div class="leftcolumn">
-    <div class="card">
-      <h2>There Are 4 Stages of Sleep</h2>
-      <h5>Rapid Eye Movement (REM)</h5>
-      <img class="center" src="assets/img/4-stages-of-sleep.jpg" alt="REM/NREM" width="500" height="600">
-      <br>
-      <ul>
-        <li><u><b>Non-REM (NREM) sleep</b></u></li>
-        <ul>
-          <li><u><b>Stage 1:</b></u> the lightest stage of NREM → the drowsy sleep stage that can be easily disrupted causing awakenings or arousals. The muscles within your body begin to relax and your brain activity begins to decrease.</li>
-          <br>
-          <li><u><b>Stage 2:</b></u> the first actual stage that defines NREM sleep → awakenings or arousals do not occur as easily as in stage 1 and slow moving eye rolls discontinue. Brain waves continue to slow with specific bursts of rapid activity known as sleep spindles intermixed with sleep structures known as K complexes. (they both serve as protection for the brain from awakening from sleep). Your body temperature begins to decrease and heart rate begins to slow.</li>
-          <br>
-          <li><u><b>Stage 3:</b></u> the deep stage of NREM sleep → the most restorative stage of sleep which consists of delta waves or slow waves. Awakenings and arousals are rare and often it is difficult to awaken someone in stage 3 sleep. Parasomnias (sleepwalking, sleep talking, and nightmares) occur during the deepest stage of sleep.</li>
-        </ul>
-        <br>
-        <li><u><b>REM sleep (rapid eye movement)</b></u></li>
-        <ul>
-          <li><u><b>Stage 4:</b></u> known as the dreaming stage → eye movement are rapid, moving from side to side and brain waves are more active than in stages 2 & 3 of sleep. awakening s and arousals can occur more easily in REM.</li>
-        </ul>
-      </ul>
+    <div class="header">
+      <i><h1 class="title-size fade-in-title">Stages of Sleep</h1></i>
     </div>
-  </div>
-</div>
+    
+    <div class="row">
+      <div class="leftcolumn">
+        <div class="card fade-in-card">
+          <h2 class="blue-font">There are four stages of sleep:</h2>
+          <br>
+          <ul>
+            <li><u><b>Non-REM (NREM) sleep</b></u></li>
+            <ul>
+              <li><b>Stage 1</b><i> (the lightest stage of NREM)</i><b>:</b> the drowsy sleep stage that can be easily disrupted causing awakenings or arousals. The muscles within your body begin to relax and your brain activity begins to decrease.</li>
+              <br>
+              <li><b>Stage 2</b><i> (the first actual stage that defines NREM sleep)</i><b>:</b> awakenings or arousals do not occur as easily as in stage 1 and slow moving eye rolls discontinue. Brain waves continue to slow with specific bursts of rapid activity known as sleep spindles intermixed with sleep structures known as K complexes. (they both serve as protection for the brain from awakening from sleep). Your body temperature begins to decrease and heart rate begins to slow.</li>
+              <br>
+              <li><b>Stage 3</b><i> (the deep stage of NREM sleep)</i><b>:</b> the most restorative stage of sleep which consists of delta waves or slow waves. Awakenings and arousals are rare and often it is difficult to awaken someone in stage 3 sleep. Parasomnias (sleepwalking, sleep talking, and nightmares) occur during the deepest stage of sleep.</li>
+            </ul>
+            <br>
+            <li><u><b>REM sleep (rapid eye movement)</b></u></li>
+            <ul>
+            <li><b>Stage 4</b><i> (known as the dreaming stage)</i><b>:</b> eye movement are rapid, moving from side to side and brain waves are more active than in stages 2 & 3 of sleep. awakening s and arousals can occur more easily in REM.</li>
+            </ul>
+          </ul>
+          <br>
+          <img class="center fade-in-img" src="assets/img/4-stages-of-sleep.jpg" alt="REM/NREM" width="500" height="600"/>
+        </div>
+      </div>
+    </div>
 
   </body>
 </html>
